--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gluon/packages/dal"]
-	path = gluon/packages/dal
+[submodule "packages/dal"]
+	path = packages/dal
 	url = https://github.com/web2py/pydal.git
