--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pyjwt
 yatl
-pydal3 # should really be pydal but pydal should be updated
+pydal # should really be pydal but pydal should be updated
 bottle
 gunicorn
 gevent
