--- a/.gitignore
+++ b/.gitignore
@@ -41,16 +41,11 @@ applications/*
 !applications/todo/*
 !applications/examples
 !applications/examples/*
-!applications/admin
-!applications/admin/*
-!applications/dashboard
-!applications/dashboard/*
-!applications/test1
-!applications/test1/*
+!applications/_dashboard
+!applications/_dashboard/*
+!applications/_scaffold
+!applications/_scaffold/*
 applications/*/databases/*
-applications/*/sessions/*
-applications/*/errors/*
-applications/*/cache/*
 applications/*/uploads/*
 applications/*/*.py[oc]
 applications/*/static/temp
@@ -62,5 +57,5 @@ HOWTO-web2py-devel
 *.sublime-project
 *.sublime-workspace
 .idea/*
-site-packages/
+packages/
 logs/
