--- a/.gitignore
+++ b/.gitignore
@@ -13,49 +13,28 @@
 *.orig
 Thumbs.db
 .DS_Store
-index.yaml
-routes.py
-logging.conf
-gluon/tests/VERSION
-gluon/tests/sql.log
-httpserver.log
-httpserver.pid
-parameters*.py
 ./deposit
 ./benchmark
 ./build
-./dist*
-./dummy_tests
-./optional_contrib
+./dist
 ./ssl
 ./docs
 ./logs
 ./*.zip
-./gluon/*.1
-./gluon/*.txt
-./admin.w2p
-./examples.w2p
-cron.master
-applications/*
-!applications/todo
-!applications/todo/*
-!applications/examples
-!applications/examples/*
-!applications/_dashboard
-!applications/_dashboard/*
-!applications/_scaffold
-!applications/_scaffold/*
-applications/*/databases/*
-applications/*/uploads/*
-applications/*/*.py[oc]
-applications/*/static/temp
-applications/*/progress.log
-applications/examples/static/epydoc
-applications/examples/static/sphinx
-applications/admin/cron/cron.master
-HOWTO-web2py-devel
-*.sublime-project
-*.sublime-workspace
-.idea/*
+apps/*
+!apps/todo
+!apps/todo/*
+!apps/examples
+!apps/examples/*
+!apps/_dashboard
+!apps/_dashboard/*
+!apps/_scaffold
+!apps/_scaffold/*
+!apps/superheroes
+!apps/superheroes/*
+!apps/*/databases/README*
+apps/*/databases/*
+apps/*/uploads/*
+apps/*/*.py[oc]
 packages/
 logs/
