--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: "bionic"
+dist: "xenial"
 sudo: required
 cache: pip
 language: python
@@ -7,7 +7,6 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
-  - "3.8-dev"  # 3.8 development branch
 
 install:
   - pip install -r requirements.txt
