--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 threadsafevariable
-pydal >= 20190915.2
+pydal >= 20191224.1
 pyjwt >= 1.6.4
 pluralize >= 0.1.5
 yatl >= 1.0.11
-bottle
+bottle >= 0.12
 tornado
 gunicorn
 gevent
