--- a/deployment_tools/gae/requirements.txt
+++ b/deployment_tools/gae/requirements.txt
@@ -1,2 +1,10 @@
 mysqlclient
 psycopg2
+bottle >= 0.12
+requests
+threadsafevariable
+pyjwt >= 1.7.1
+pluralize >= 0.1.5
+yatl >= 20200329.1
+pydal >= 20200404.1
+
