--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ pluralize >= 0.1.5
 yatl >= 20200430.1
 pydal >= 1.20200506.2
 python-memcached # used for testing or for optionally actually accessing memcache
+watchgod >= 0.6
