--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ pydal >= 20200910.1
 python-memcached # used for testing or for optionally actually accessing memcache
 watchgod >= 0.6
 
+### optonal only for documntation ###
+# sphinx
+# sphinx_rtd_theme
