--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ tornado
 gunicorn
 gevent
 requests
-threadsafevariable
+threadsafevariable >= 1.1
 pyjwt >= 1.7.1
 pluralize >= 0.1.6
 yatl >= 20201121.1
