--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,5 @@ pydal >= 20200910.1
 python-memcached # used for testing or for optionally actually accessing memcache
 watchgod >= 0.6
 
-### optional, used for documentation only ###
-# sphinx
-# sphinx_rtd_theme
-# rinohtype
+### for documentation only ###
+# use also docs/requirements.txt
