changed requirements for gae deployment

--- a/deployment_tools/gae/Makefile
+++ b/deployment_tools/gae/Makefile
@@ -4,15 +4,13 @@ install-gcloud-linux:
 upgrade-gcloud:
 	gcloud components update
 setup:
-	cat ../../requirements.txt \
-	| grep -v gevent \
-	| grep -v tornado \
-	| grep -v gunicorn \
-	| grep -v memcache > requirements.txt
-	echo mysqlclient >> requirements.txt
-	mkdir -p lib
-	# python3 -m pip install -U --no-deps py4web -t lib/
-	cp -r ../../py4web lib/
+        mkdir -p lib
+        pip-compile requirements.in
+        python3 -m pip install -U --no-deps -r requirements.txt -t lib/
+        rm -rf lib/gevent*
+        rm -rf lib/gunicorn*
+        rm -rf lib/zope*
+        rm requirements.txt
 deploy:
 	gcloud config set account ${email}
 	gcloud config set project ${project}
