--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ renoir >= 1.4.0
 requests
 threadsafevariable >= 1.1
 tornado
+yatl >= 20210326.1
 watchgod >= 0.6
 
 ### for documentation only ###
