--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v2
@@ -22,10 +22,10 @@ jobs:
             python -m pip install --upgrade pip
             python3 -m pip install -r requirements.txt
             python3 -m pip install -r test-requirements.txt
-            python3 -m pip install ombott
       - name: build
         run: |
             python3 setup.py install
       - name: Test with pytest
         run: |
             python3 -m pytest --cov=py4web --cov-report html:cov.html -v -s tests/
+
