--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - master
+    - ombott-dev
   pull_request:
     branches:
     - master
@@ -28,7 +29,6 @@ jobs:
             python -m pip install --upgrade pip
             python3 -m pip install -r requirements.txt
             python3 -m pip install -r test-requirements.txt
-            python3 -m pip install ombott
       - name: build
         run: |
             python3 setup.py install
