--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ requests
 threadsafevariable >= 1.1
 pyjwt >= 2.0.1
 pluralize >= 0.1.7
+rocket3
 yatl >= 20210326.1
 pydal >= 20210626.3
 watchgod >= 0.6
