--- a/deployment_tools/docker/Makefile
+++ b/deployment_tools/docker/Makefile
@@ -1,9 +1,21 @@
 # https://codeblog.dotsandbrackets.com/quick-intro-to-docker-compose/
-up:
-	docker-compose up -d
-rebuild:
-	docker-compose up --build --force-recreate postgres web
-down:
-	docker-compose down
-ssh:
-	docker-compose exec web bash
+
+
+DOCKER_COMPOSE=docker-compose
+#DOCKER_COMPOSE=docker compose
+# On latest docker version, use 'docker compose'
+
+up: ## Start all containers in foreground
+	@$(DOCKER_COMPOSE) up -d
+
+down: ## Stop all containers
+	@$(DOCKER_COMPOSE) down
+
+restart: ## Restart all containers in foreground
+	@$(DOCKER_COMPOSE) restart -d
+
+rebuild: ## Force rebuild of all containers
+	@$(DOCKER_COMPOSE) up --build --force-recreate postgres web
+
+ssh: ## Interactive run
+	@$(DOCKER_COMPOSE) exec web bash
