--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,9 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "Python: Current File",
+            "name": "Python: py4web",
             "type": "python",
             "request": "launch",
             "program": "py4web.py",
