--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -28,7 +28,7 @@ jobs:
             sudo apt-get install memcached libmemcached-tools
             python -m pip install --upgrade pip
             ls -l
-            python -m pip install py4web
+            python -m pip install -e ./
             python -m pip install -r test-requirements.txt
       - name: Test
         run: |
