--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,25 +10,10 @@ classifiers = [
       "License :: OSI Approved :: BSD License",
       "Operating System :: OS Independent",
 ]
-dependencies = [
-        "wheel",
-        "ombott >= 1.0.0",
-        "click",
-        "colorama",
-        "cryptography",
-        "portalocker",
-        "tornado",
-        "renoir >= 1.4.0",
-        "requests",
-        "threadsafevariable >= 20230507.1",
-        "pyjwt >= 2.0.1",
-        "pycryptodome",
-        "pluralize >= 20230507.1",
-        "rocket3 >= 20230507.1",
-        "yatl >= 20230507.3",
-        "pydal >= 20230521.1",
-        "watchgod >= 0.6",
-    ]
+dynamic = ["dependencies"]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
 
 [tool.setuptools]    
 packages = ["py4web", "py4web.utils", "py4web.utils.auth_plugins",]
