Fix to Google Scoped Login and launch.json (#851)
* Fixed auth enforcer so uses plugins if available

* Better error catching in login module

* Ok

* Removed some bugs

* Improved the documentation

* ok

* fixed launch.json

* Cleaned up duplication

* Contributed back improvement to plugin

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "py4web.py",
             "args": [
-                "run",
+                "run", "--errorlog=:stdout", "-L", "20",
                 "apps"
             ],
             "console": "integratedTerminal",
