--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ Thumbs.db
 ./*.zip
 apps/_documentation/static/*/*.pdf
 apps/_documentation/static/*/*.epub
-apps*/*
+apps*/*/*
 !apps/todo/*
 !apps/showcase/*
 !apps/_dashboard/*
