--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel
-ombott==2.3
+ombott>=2.3
 click
 colorama
 cryptography
@@ -11,9 +11,9 @@ threadsafevariable >= 20230507.1
 pyjwt >= 2.0.1
 pycryptodome
 pluralize >= 20240515.1
-rocket3 >= 20241019.1
+rocket3 >= 20241201.1
 yatl >= 20230507.3
-pydal >= 20241111.1
+pydal >= 20241201.2
 watchgod >= 0.6
 
 # optional modules:
