Update dockerfile to support newer Ubuntu distribution requirement to install python in a virtual environment

--- a/deployment_tools/docker/Dockerfile
+++ b/deployment_tools/docker/Dockerfile
@@ -1,21 +1,21 @@
-
 FROM ubuntu:latest
 
 ARG user=py4web
 
 RUN apt update && \
-    apt install -y git python3 python3-pip memcached && \
+    apt install -y git python3 python3-pip python3-venv memcached && \
     service memcached restart && \
     groupadd -r $user && \
-    useradd -m -r -g $user $user && \
-    python3 -m pip install -U py4web
+    useradd -m -r -g $user $user
 
 USER $user
+WORKDIR /home/$user/
 
-RUN cd /home/$user/ && py4web setup --yes apps
+RUN python3 -m venv venv && \
+    . venv/bin/activate && \
+    pip install -U py4web && \
+    py4web setup --yes apps
 
 EXPOSE 8000
 
-WORKDIR /home/$user/
-
-CMD py4web run --password_file password.txt --host 0.0.0.0 --port 8000 apps
+CMD . venv/bin/activate && py4web run --password_file password.txt --host 0.0.0.0 --port 8000 apps
