--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
+[tool.poetry]
+name = "your-project-name"
+version = "0.1.0"
+description = ""
+authors = ["Your Name <your@email.com>"]
+package-mode = false  
+
+[tool.poetry.dependencies]
+python = "^3.11"
+py4web = "^1.20250125.1"
+
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
