--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [{ name="Massimo Di Pierro", email="massimo.dipierro@gmail.com" },]
 description = "A fast, stable, comprehensive web framework"
 readme = "README.rst"
 requires-python = ">=3.9"
-license = "BSD-3-Clause"
+license = { file="LICENSE.md" }
 dynamic = ["version"]
 dependencies = [
     "wheel",
