--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -17,19 +17,11 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
+    env:
+      UV_PYTHON: ${{ matrix.python-version }}
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install Everything
-        run: |
-            sudo apt-get install memcached libmemcached-tools
-            python -m pip install --upgrade pip
-            ls -l
-            python -m pip install -e ./
-            python -m pip install -r test-requirements.txt
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Test
-        run: |
-            python3 -m pytest --cov=py4web --cov-report html:cov.html -v -s tests/
+        run: make test
