Revert "watchgod to watchfiles, thanks Tom"
This reverts commit 0025dde9892d386f86ae75e8f8fe0309a9bf1429.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "rocket3 >= 20241225.1",
     "yatl >= 20230507.3",
     "pydal >= 20250607.2",
-    "watchfiles",
+    "watchgod >= 0.6",
 ]
 
 [tool.setuptools.dynamic]
