added support for .py4web_ignore, thanks tclerckx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "click",
     "colorama",
     "cryptography",
+    "pathspec",
     "portalocker",
     "tornado",
     "renoir >= 1.4.0",
